--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,27 +1,17 @@
 
-
-.ractive-tooltip-container
+.ractive-tooltip
     position absolute
-    left 0
-    top 0
-    right 0
-    bottom 0
-    z-index 9999
+    display table
 
-    .tooltip
-        position absolute
-        display table
+    padding 0.5em
 
-        padding 0.5em
+    color #fff
+    background #000
+    box-shadow 0 2px 2px rgba(0,0,0,0.1)
+    border-radius 5px
+    white-space nowrap
+    z-index 99999
 
-        color #fff
-        background #000
-        box-shadow 0 2px 2px rgba(0,0,0,0.1)
-        border-radius 5px
-        white-space nowrap
-        z-index 99999
-
-        font-style normal
-        text-transform none
-
-        pointer-events none
+    font-style normal
+    text-transform none
+    pointer-events none
